# izem

src/include/: Makefile.mk
src/include/list/: zm_scdlist.h
src/list/: Makefile.mk  zm_scdlist.c
test/regres/list/: Makefile.am  array_to_scdlist.c
